# ros_flydra

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  rosdep.yaml  setup.py  stack.xml
calib/: feb19flipx.xml
launch/: flydra.launch  main_brain.launch
msg/: BestPose.msg  CameraList.msg  FlydraError.msg  Statistics  Statistics.msg  flydra_object.msg
nodes/: camhistograms  camnode  camnode2-pylon  flydra2ros  flydra2rviz  flydra2stats  flydra_service.py  flydra_service_usage_example.py  joysuperpacket  liveplot  main_brain  showpose  speakpose
scripts/: simple-console.py
src/: setup.py
src/ros_flydra/: constants.py  cv2_bridge.py
srv/: MainBrainCloseCamera.srv  MainBrainGetAndClearCommands.srv  MainBrainGetListenAddress.srv  MainBrainGetVersion.srv  MainBrainLogMessage.srv  MainBrainReceiveMissingData.srv  MainBrainRegisterNewCamera.srv  MainBrainSetImage.srv  super_packet_service.srv
